kubernetes-config/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: ${APP_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_DEPLOYMENY}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
      - name: ${APP_NAME}
        image: ${REG_CONT_NAME}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
